--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Time, Space, Complexity</h1>
+	<p>First paragraph explaining Time Complexity and efficient</p>
+	<p>Second paragraph explaining <b>Space Complexity</b> and O(n)</p>
 
 </body>
 
