--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<h1>Time, Space, Complexity</h1>
-	<p>First paragraph explaining Time Complexity and efficient</p>
-	<p>Second paragraph explaining <b>Space Complexity</b> and O(n)</p>
+	<p>Time complexity, efficient</p>
+	<p><b>Space Complexity</b>O(n)</p>
 
 </body>
 
